------------------------
/Users/laurenz/graphql-mongodb/uml_diagramms/Resource_Organization.png

@startuml Organization
hide circle
hide methods
hide stereotype
show <<Enumeration>> stereotype
skinparam class {
   BackgroundColor<<Enumeration>> #E6F5F7
   BackgroundColor<<Ref>> #FFFFE0
   BackgroundColor<<Pivot>> #FFFFFFF
   BackgroundColor #FCF2E3
}

class Organization  <<Pivot>> {
    existsDuring : TimePeriod
    href : Uri
    id : String
    isHeadOffice : Boolean
    isLegalEntity : Boolean
    name : String
    nameType : String
    organizationType : String
    status : OrganizationStateType
    tradingName : String
}

class OrganizationStateType <<Enumeration>> {
    initialized
    validated
    closed
}

class ContactMedium  {
    href : Uri
    id : String
    mediumType : String
    preferred : Boolean
    validFor : TimePeriod
}

class MediumCharacteristic  {
    city : String
    contactType : String
    country : String
    emailAddress : String
    faxNumber : String
    href : Uri
    id : String
    phoneNumber : String
    postCode : String
    socialNetworkId : String
    stateOrProvince : String
    street1 : String
    street2 : String
}

class ExternalReference  {
    externalReferenceType : String
    href : Uri
    id : String
    name : String
}

class PartyCreditProfile  {
    creditAgencyName : String
    creditAgencyType : String
    href : Uri
    id : String
    ratingReference : String
    ratingScore : Integer
    validFor : TimePeriod
}


Organization -right[hidden]-> OrganizationStateType

ContactMedium "0..*" <--* Organization : contactMedium

PartyCreditProfile "0..*" <--* Organization : creditRating

ExternalReference "0..*" <--* Organization : externalReference

ContactMedium *-right-> "0..1" MediumCharacteristic : characteristic


@enduml

PlantUML version 1.2019.00(Sun Jan 13 17:46:42 IST 2019)
(GPL source distribution)
Java Runtime: Java(TM) SE Runtime Environment
JVM: Java HotSpot(TM) 64-Bit Server VM
Java Version: 1.8.0_251-b08
Operating System: Windows 10
OS Version: 10.0
Default Encoding: Cp1252
Language: en
Country: US

------------------------
